Small style adjustments

--- a/assets/styles/modules/_creatives-list.scss
+++ b/assets/styles/modules/_creatives-list.scss
@@ -2,7 +2,7 @@
   list-style: none;
   padding: 0;
 }
-.creatives-list__item {
+.creatives-list__item, .no-creatives-list-items {
   padding: 8px 0;
 }
 .creative-list__name {
